# sara

./: .gitignore  .hlint.yaml  SARA_Architecture_and_Implementation_Guide_v1.1.md  SARA_MASTER_GUIDE.md  Sara.md  WIP.md  auditReport.txt  auditReport2.txt  improvements.md  sara.cabal  sara_audit_report.md
_build/: .shake.database  report.html
_site/: search.json
app/: Main.hs
bench/: Main.hs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ERRORS.md  MIGRATION.md  QUICKSTART.md  SECURITY.md  TUTORIAL_DATA.md  TUTORIAL_LUCID.md
scaffold-test/: sara.yaml
scaffold-test/posts/: jekyll-test.md
scaffold-test/templates/: default.html
src/: SARA.hs
src/SARA/: Config.hs  DSL.hs  Diagnostics.hs  Error.hs  Monad.hs  Types.hs
src/SARA/Asset/: BinaryCheck.hs  Copy.hs  Discover.hs  Error.hs  Image.hs  Placeholder.hs
src/SARA/Frontmatter/: Detect.hs  Error.hs  Parser.hs  Remap.hs
src/SARA/Internal/: Engine.hs  Hash.hs  Planner.hs
src/SARA/LiveReload/: Server.hs  Watcher.hs
src/SARA/Markdown/: Error.hs  Parser.hs  Shortcode.hs
src/SARA/Migration/: Detect.hs  Engine.hs  Error.hs  Hakyll.hs  Hugo.hs  Jekyll.hs  Scaffold.hs
src/SARA/Routing/: Engine.hs  Error.hs  Types.hs
src/SARA/SEO/: Audit.hs  Error.hs  Feed.hs  JsonLD.hs  OpenGraph.hs  Sitemap.hs
src/SARA/Search/: Index.hs
src/SARA/Security/: Error.hs  GlobGuard.hs  HtmlEscape.hs  PathGuard.hs  RegexGuard.hs  ShellGuard.hs
src/SARA/Template/: Error.hs  Lucid.hs  Renderer.hs
src/SARA/Validator/: AssetChecker.hs  Error.hs  LinkChecker.hs
templates/: index.html  post.html
test-site/: site.hs
test-site/_build/: .shake.database  report.html
test-site/templates/: post.html
test/Integration/: EndToEndSpec.hs  EnhancedFeaturesSpec.hs  IntegrationSpec.hs  MigrationSpec.hs  SmokeSpec.hs  StressSpec.hs
test/Property/: EveryFunctionSpec.hs  FrontmatterPropSpec.hs  HedgehogExhaustiveSpec.hs  HedgehogSecuritySpec.hs  OutlierExhaustiveSpec.hs  OutlierSpec.hs  PipelineSpec.hs  PropertySpec.hs  RoutePropSpec.hs  RoutingSpec.hs  SecurityPropSpec.hs
test/SARA/: AdaptiveImageSpec.hs  EndToEndSpec.hs  EnhancedFeaturesSpec.hs  FrontmatterPropSpec.hs  FrontmatterSpec.hs  HedgehogExhaustiveSpec.hs  HedgehogSecuritySpec.hs  IntegrationSpec.hs  MigrationSpec.hs  OutlierExhaustiveSpec.hs  OutlierSpec.hs  PipelineSpec.hs  PropertySpec.hs  RoutePropSpec.hs  RoutingSpec.hs  SEOSpec.hs  SecurityPropSpec.hs  SecuritySpec.hs  SmokeSpec.hs  StressSpec.hs
test/Unit/: AdaptiveImageSpec.hs  EngineCriticalSpec.hs  FrontmatterSpec.hs  SEOSpec.hs  SecuritySpec.hs
test/fixtures/scaffold-test/: site.hs
test/fixtures/scaffold-test/posts/: hello-world.md
test/fixtures/templates/: default.html
test/fixtures/test-site/_site/posts/: hello.md
test/fixtures/test-site/posts/: hello.md
