cabal-version:      3.4
name:               sara
version:            0.1.0.0
synopsis:           Simple, Adaptive, Responsive Architecture — Industrial Haskell SSG
description:
  SARA is a high-performance static site generator built on Shake.
  It features an industrial-grade DSL, unbypassable dependency tracking,
  and a high-assurance diagnostic system.
license:            MIT
author:             bombay boyz
maintainer:         bombay.boyz@hotmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
  import:           warnings
  exposed-modules:
    SARA
    SARA.Error
    SARA.Config
    SARA.Types
    SARA.Monad
    SARA.DSL
    SARA.Template.Lucid
    SARA.Migration.Detect
    SARA.Migration.Scaffold
    SARA.Migration.Hakyll
    SARA.LiveReload.Server
    SARA.LiveReload.Watcher
  other-modules:
    SARA.Security.PathGuard
    SARA.Security.GlobGuard
    SARA.Security.RegexGuard
    SARA.Security.HtmlEscape
    SARA.Security.ShellGuard
    SARA.Frontmatter.Detect
    SARA.Frontmatter.Parser
    SARA.Frontmatter.Remap
    SARA.Routing.Engine
    SARA.SEO.JsonLD
    SARA.SEO.OpenGraph
    SARA.SEO.Audit
    SARA.SEO.Sitemap
    SARA.SEO.Feed
    SARA.Validator.LinkChecker
    SARA.Validator.AssetChecker
    SARA.Migration.Hugo
    SARA.Search.Index
    SARA.Template.Renderer
    SARA.Markdown.Shortcode
    SARA.Asset.Copy
    SARA.Asset.BinaryCheck
    SARA.Asset.Placeholder
    SARA.Diagnostics
    SARA.Internal.Planner
    SARA.Internal.Engine
    SARA.Internal.Hash
    SARA.Markdown.Parser
    SARA.Asset.Discover
    SARA.Asset.Image
  build-depends:
    base                     >= 4.16  && < 5,
    aeson                    >= 2.0,
    bytestring               >= 0.11,
    text                     >= 1.2,
    shake                    >= 0.19,
    filepath                 >= 1.4,
    directory                >= 1.3,
    yaml                     >= 0.11,
    toml-parser              >= 1.3,
    JuicyPixels              >= 3.3,
    JuicyPixels-extra        >= 0.6,
    base64-bytestring        >= 1.2,
    blake3                   >= 0.1,
    stache                   >= 2.3,
    lucid                    >= 2.11,
    Glob                     >= 0.10,
    fsnotify                 >= 0.4,
    scotty                   >= 0.12,
    websockets               >= 0.12,
    wai-websockets           >= 3.0,
    http-types               >= 0.12,
    stm                      >= 2.5,
    tagsoup                  >= 0.14,
    xml-conduit              >= 1.9,
    regex-tdfa               >= 1.3,
    regex-pcre-builtin       >= 0.95,
    cmark-gfm                >= 0.2,
    unliftio                 >= 0.2,
    unliftio-core            >= 0.2,
    megaparsec               >= 9.0,
    containers               >= 0.6,
    vector                   >= 0.13,
    array                    >= 0.5,
    unordered-containers     >= 0.2,
    mtl                      >= 2.2,
    prettyprinter            >= 1.7,
    prettyprinter-ansi-terminal >= 1.1,
    cpu                      >= 0.1,
    async                    >= 2.2,
    wai                      >= 3.2,
    wai-middleware-static    >= 0.9,
    network                  >= 3.1
  hs-source-dirs:   src
  default-language: GHC2021

executable sara
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base,
    sara,
    optparse-applicative   >= 0.17,
    text,
    filepath,
    directory,
    unliftio,
    process,
    warp,
    aeson
  hs-source-dirs:   app
  default-language: GHC2021

test-suite sara-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Unit.AdaptiveImageSpec
    Unit.FrontmatterSpec
    Unit.SecuritySpec
    Unit.SEOSpec
    Integration.EndToEndSpec
    Integration.EnhancedFeaturesSpec
    Integration.IntegrationSpec
    Integration.MigrationSpec
    Integration.SmokeSpec
    Integration.StressSpec
    Property.FrontmatterPropSpec
    Property.HedgehogExhaustiveSpec
    Property.HedgehogSecuritySpec
    Property.OutlierExhaustiveSpec
    Property.OutlierSpec
    Property.PipelineSpec
    Property.PropertySpec
    Property.RoutePropSpec
    Property.RoutingSpec
    Property.SecurityPropSpec
  hs-source-dirs:   test, src
  default-language: GHC2021
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    base, sara,
    hspec          >= 2.11,
    QuickCheck,
    aeson,
    text,
    filepath,
    directory,
    temporary      >= 1.3,
    unordered-containers,
    containers,
    mtl,
    unliftio,
    unliftio-core,
    process,
    yaml,
    hedgehog,
    hspec-hedgehog,
    vector,
    JuicyPixels,
    JuicyPixels-extra,
    base64-bytestring,
    bytestring,
    shake,
    toml-parser,
    blake3,
    stache,
    lucid,
    Glob,
    fsnotify,
    scotty,
    websockets,
    wai-websockets,
    http-types,
    stm,
    tagsoup,
    xml-conduit,
    regex-tdfa,
    regex-pcre-builtin,
    megaparsec,
    cmark-gfm,
    prettyprinter,
    prettyprinter-ansi-terminal,
    cpu,
    async,
    wai,
    wai-middleware-static,
    network
